UAVOFrSKYSensorHubBridge for CopterControl

--- a/flight/targets/coptercontrol/fw/Makefile
+++ b/flight/targets/coptercontrol/fw/Makefile
@@ -66,6 +66,7 @@ USE_ALTITUDE ?= NO
 USE_AUTOTUNE ?= YES
 TEST_FAULTS ?= NO
 USE_UAVOMAVLINKBRIDGE ?= YES
+USE_USE_UAVOFRSKYSENSORHUBBRIDGE ?= YES
 USE_PCF8591 ?= NO
 ifeq ($(USE_PCF8591), YES)
 ifeq ($(USE_I2C), NO)
@@ -104,6 +105,9 @@ OPTMODULES += Autotune
 endif
 ifeq ($(USE_UAVOMAVLINKBRIDGE), YES)
 OPTMODULES += UAVOMavlinkBridge
+endif
+ifeq ($(USE_UAVOFRSKYSENSORHUBBRIDGE), YES)
+OPTMODULES += UAVOFrSKYSensorHubBridge
 endif
 ifeq ($(USE_BATTERY), YES)
 OPTMODULES += Battery
