picoC: solves PyMite conflicts. add support for revolution and revomini
Explicite path name solves conflicts with PyMite. Now picoC is also
available on revolution and revomini. These targets needs testing.

--- a/flight/targets/revolution/fw/Makefile
+++ b/flight/targets/revolution/fw/Makefile
@@ -81,6 +81,7 @@ OPTMODULES += Battery
 OPTMODULES += VibrationAnalysis
 OPTMODULES += Airspeed/revolution
 OPTMODULES += UAVOHoTTBridge
+OPTMODULES += PicoC
 
 PYMODULES = 
 #FlightPlan
