LTM: fix 2400 bauds bottleneck fix makefiles fix missing missing pios_com_lighttelemetry_id on quanton board. switched to tab indent reorganized code to proper formatting guidelines. use roundf instead of round

--- a/flight/targets/flyingf3/fw/Makefile
+++ b/flight/targets/flyingf3/fw/Makefile
@@ -60,6 +60,7 @@ OPTMODULES += ComUsbBridge
 OPTMODULES += Airspeed/revolution
 OPTMODULES += UAVOHoTTBridge
 OPTMODULES += UAVOFrSKYSensorHubBridge
+OPTMODULES += UAVOLighttelemetryBridge
 
 # Paths
 OPUAVTALKINC = $(OPUAVTALK)/inc
