--- a/flight/targets/flyingf4/fw/Makefile
+++ b/flight/targets/flyingf4/fw/Makefile
@@ -55,6 +55,7 @@ OPTMODULES += UAVOFrSKYSensorHubBridge
 OPTMODULES += Battery
 OPTMODULES += ComUsbBridge
 OPTMODULES += Airspeed/revolution
+OPTMODULES += UAVOLighttelemetryBridge
 
 
 # Paths
