--- a/flight/targets/freedom/fw/Makefile
+++ b/flight/targets/freedom/fw/Makefile
@@ -60,6 +60,7 @@ OPTMODULES += ComUsbBridge
 OPTMODULES += Airspeed/revolution
 OPTMODULES += UAVOHoTTBridge
 OPTMODULES += UAVOFrSKYSensorHubBridge
+OPTMODULES += UAVOLighttelemetryBridge
 
 PYMODULES = 
 #FlightPlan
