Removed redefinition of PYTHON var in makefiles
Also fixed some typos in some makefiles.

Signed-off-by: Francesco Nero <nerofrancesco@hotmail.com>

--- a/flight/targets/revolution/fw/Makefile.osx
+++ b/flight/targets/revolution/fw/Makefile.osx
@@ -326,7 +326,7 @@ LDFLAGS += -L$(OUTDIR)
 REMOVE  = rm -f
 
 $(OUTDIR)/sim_firmwareinfo.c: $(ROOT_DIR)/make/templates/firmwareinfotemplate_sim.c
-	$(V1) python $(ROOT_DIR)/make/scripts/version-info.py \
+	$(V1) $(PYTHON) $(ROOT_DIR)/make/scripts/version-info.py \
 		--path=$(ROOT_DIR) \
 		--template=$^ \
 		--outfile=$@ \
