--- a/flight/targets/flyingf3/fw/Makefile
+++ b/flight/targets/flyingf3/fw/Makefile
@@ -61,6 +61,7 @@ OPTMODULES += Airspeed/revolution
 OPTMODULES += UAVOHoTTBridge
 OPTMODULES += UAVOFrSKYSensorHubBridge
 OPTMODULES += UAVOLighttelemetryBridge
+OPTMODULES += UAVOFrSkySPortBridge
 
 # Paths
 OPUAVTALKINC = $(OPUAVTALK)/inc
