UAVOFrSKYSPortBridge: module name "UAVOFrSkySPortBridge" changed to "UAVOFrSKYSPortBridger"
To be consistent with existing UAVOFrSKYSensorHubBridge module

--- a/flight/targets/flyingf3/fw/Makefile
+++ b/flight/targets/flyingf3/fw/Makefile
@@ -61,7 +61,7 @@ OPTMODULES += Airspeed/revolution
 OPTMODULES += UAVOHoTTBridge
 OPTMODULES += UAVOFrSKYSensorHubBridge
 OPTMODULES += UAVOLighttelemetryBridge
-OPTMODULES += UAVOFrSkySPortBridge
+OPTMODULES += UAVOFrSKYSPortBridge
 
 # Paths
 OPUAVTALKINC = $(OPUAVTALK)/inc
